# flake-mpv-discord-rpc

./: flake.nix  pyproject.toml  result
mpv_discord_rpc/: __init__.py  __main__.py  covers.py  yt_music_cover.py
sample_package/: __init__.py  __main__.py
