[tool.poetry]
name = "mpv-discord-rpc"
version = "0.1.0"
description = "Discord Rich Presence from mpv's JSON IPC"
authors = ["Virinas-code <alexcode228@gmail.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "mpv_discord_rpc" }
]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^15.0.1"
requests = "^2.32.4"

[project]
name = "mpv-discord-rpc"

[project.scripts]
mpv_discord_rpc = 'mpv_discord_rpc:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"