[project]
name = "mpv_discord_rpc"
version = "1.0.0"
description = "Discord Rich Presence using MPV's JSON IPC"
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
mpv_discord_rpc = "mpv_discord_rpc:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
